prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/float_underflow.diag.txt
ERROR: float constant underflow
testData/diagnostics/float_underflow.nut:1:8

println(0.00000000000000000000000000000000000000000000000000000000000000001)
        ^------------------------------------------------------------------


